--- a/app/src/main/res/layout/activity_searchformovies.xml
+++ b/app/src/main/res/layout/activity_searchformovies.xml
@@ -21,6 +21,7 @@
             android:autofillHints=""
             android:ems="10"
             android:hint="@string/movie_name"
+            android:textColor="@color/white"
             android:inputType="textPersonName"
             android:minHeight="48dp"
             android:textColorHint="#757575"
@@ -35,6 +36,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="448dp"
             android:text="@string/retrieve_movie"
+            android:textColor="@color/black"
+            android:backgroundTint="@android:color/holo_orange_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -45,6 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="556dp"
             android:text="@string/save_movie_to_database"
+            android:textColor="@color/black"
+            android:backgroundTint="@android:color/holo_orange_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
